media/jackett/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress-external
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jackett.alnav.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress-internal
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jackett.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
